# OpenCV_Py_from_CPP

./: .gitignore  CMakeLists.txt  README.md  firstInstall.sh  installAndRun.sh  main.cpp  runPython.sh
py/: convertmodel.py  fishML.py  fishML_2.py  fishML_3.py
py/models/fishModel1/: fingerprint.pb
py/models/fishModel1/variables/: variables.index
sql/scripts/: fc_tables.sql
src/: fishMLBase.cpp  fishMLBase.h  fishMLWrapper.cpp  fishMLWrapper.h  fishTracker.cpp  fishTracker.h  helperfunc.cpp  helperfunc.h  main.cpp
